# rushdown

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: test.yml
benches/: benchmarks.rs  cmark_benchmark.c  go.mod  goldmark_benchmark.go
docs/playground/: index.html  rushdown_wasm.js  rushdown_wasm_bg.wasm
fuzz/: Cargo.toml
fuzz/fuzz_targets/: markdown.rs
scripts/: unicode-case-folding.py
src/: ast.rs  context.rs  error.rs  html_entity.rs  lib.rs  test.rs  text.rs  util.rs
src/parser/: attribute.rs  auto_link.rs  blockquote.rs  code_block.rs  code_span.rs  delimiter.rs  emphasis.rs  heading.rs  html_block.rs  link.rs  link_ref.rs  linkify.rs  list.rs  mod.rs  paragraph.rs  raw_html.rs  strikethrough.rs  table.rs  task_list_item.rs  thematic_break.rs
src/playground/: Makefile  index.html  playground.css
src/playground/wasm/: Cargo.toml  Makefile
src/playground/wasm/src/: lib.rs
src/renderer/: html.rs  mod.rs
src/scanner/: mod.rs  scanner_gen.rs  scanner_generic.re  scanner_record.re
tests/: ast.rs  commonmark_spec.rs  extension.rs  extra.rs  gfm.rs  options.rs  override_renderer.rs
tests/fixtures/: extra.txt  options.txt  spec.json  table.txt
