[package]
name = "rushdown"
version = "0.11.2"
authors = ["Yusuke Inuzuka <yuin@inforno.net>"]
edition = "2021"
rust-version = "1.87"
description = "A 100% CommonMark-compatible GitHub Flavored Markdown parser and renderer"
documentation = "https://docs.rs/rushdown"
homepage = "https://github.com/yuin/rushdown"
repository = "https://github.com/yuin/rushdown"
readme = "README.md"
keywords = ["markdown", "commonmark"]
license = "MIT"
categories = ["text-processing"]
exclude = [
    "/script/*",
]
resolver = "2"
build = "build.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = 'abort'

[features]
default = ["std", "html-entities"]
std = []
alloc = []
html-entities = []
inline-pos = []
hashbrown = ["dep:hashbrown"]
no-std = ["alloc", "hashbrown"]
no-std-unix-debug = ["no-std", "dep:libc"]
profile = ["dep:pprof"]
pp-ast = []

[dependencies]
hashbrown = { version = "0.15.2", optional = true}
libc = { version = "0.2", default-features = false, optional = true }
bitflags = "2.9.3"
# TODO: move to core::slice::memchr if it reaches stable
memchr = { version = "2", default-features = false }
phf = { version = "0.13.1", default-features = false }
pprof = { version = "0.15", features = ["criterion", "protobuf", "flamegraph", "prost-codec"], optional = true }

[build-dependencies]
phf = { version = "0.13.1", default-features = false }
phf_codegen = "0.13.1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = "0.8.1" 
markdown = "1.0.0"
comrak = "0.50"
pulldown-cmark = "0.13.0"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "profile"
path = "src/bin/profile.rs"
required-features = ["profile"]
